@@ -19,7 +19,6 @@
 #include "utilities/utilities.hpp"
 #include "tuning/tuning.hpp"
 
-
 namespace clblast {
 // =================================================================================================
 
@@ -29,8 +28,7 @@ class TuneXgemm {
  public:
 
   // The representative kernel and the source code
-  // static std::string KernelFamily() { return (V==1) ? "xgemm_1" : "xgemm_2"; }
-  static std::string KernelFamily() { switch(V){ case 1: return "xgemm_1"; case 2: return "xgemm_2";  }}
+  static std::string KernelFamily() { return (V==1) ? "xgemm_1" : "xgemm_2"; }
   static std::string KernelName() { return "Xgemm"; }
   static std::string GetSources() {
     return
@@ -182,8 +180,8 @@ class TuneXgemm {
  
   // Returns which Heuristic to run 
   static size_t GetHeuristic(const Arguments<T> &args){
-    // Use full-search to explore all parameter combinations or random-search to search only a part of
-    // the parameter values. The fraction is set as a command-line argument.
+    // Use full-search to explore all parameter combinations or another strategy to search only a
+    // part of the parameter values. The fraction is set as a command-line argument.
     if (args.fraction == 1.0 || args.fraction == 0.0) {
       return static_cast<size_t> (cltune::SearchMethod::FullSearch);
     }
